{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Touch",
            "id": "f2b43de9-b37b-47d0-afd3-4d49ff4d7483",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "f80011f8-0ca3-4a57-ba25-3e8b8cca49aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "81e2bb21-364d-4e79-be36-efa8a1391e66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "279650cb-c077-43e3-85c9-8b601d2f77e3",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScheme",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91b0655d-def3-406c-8b35-9ea550b775c6",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScheme",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Click",
            "id": "78b1d5fd-0088-40ce-8473-842f634b3e9a",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "679d6c63-89d1-4a09-a470-a1da91dd63cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "91adee1a-dde6-4e34-9adb-aca728e54062",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d90b7c39-1388-4150-a07a-54acad0760b6",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseScheme",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40def37a-225f-4e44-88e3-0ce7ed5c33c9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseScheme",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "TouchScheme",
            "bindingGroup": "TouchScheme",
            "devices": []
        },
        {
            "name": "MouseScheme",
            "bindingGroup": "MouseScheme",
            "devices": []
        }
    ]
}